# boilersync-cli

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.cursor/rules/: project-description.mdc
.github/workflows/: auto-tag.yml
boilersync/: cli.py  cli_helpers.py  interpolation_context.py  names.py  paths.py  template_processor.py  template_sources.py  variable_collector.py
boilersync/commands/: diff.py  init.py  pull.py  push.py  templates.py
docs/: ensemble.md  index.md  project-metadata.md
tests/: test_init_runtime_features.py  test_interpolation_context.py  test_paths.py  test_template_inheritance.py  test_template_sources.py  test_templates_commands.py  test_templates_init.py
